--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Bienvenida</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/assets/styles/styles.css">
 </head>
 <body>
     <div class="container">
         <h2>Bienvenido a Avaria</h2>
-        <img src="img/LogoAvaria.png" alt="Logo" class="logo">
+        <img src="public/assets/images/LogoAvaria.png" alt="Logo" class="logo">
         <button onclick="location.href='inicioSesion.html'">Iniciar Sesión</button>
     </div>
 </body>
