--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/assets/styles/styles.css">
 </head>
 <body>
     <div class="container">
         <h2>Bienvenido</h2>
-        <img src="img/LogoAvaria.png" alt="Logo" class="logo">
+        <img src="public/assets/images/LogoAvaria.png" alt="Logo" class="logo">
         <form>
             <input type="email" placeholder="Correo" required>
             <input type="password" placeholder="Contraseña" required>
