--- a/mainMenu.html
+++ b/mainMenu.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú Principal - Avaria</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/assets/styles/styles.css">
 </head>
 <body>
     <div class="menu-lateral">
         <div class="menu-barra">
             <button class="menu-boton">
-                <img src="img/imgMain/barraLateral.png" alt="barra" class="icono">
+                <img src="public/assets/images/barraLateral.png" alt="barra" class="icono">
             </button>
         </div>
         <div class="menu-item">
             <button class="menu-boton" onclick="location.href='mensajes.html'">
-                <img src="img/imgMain/plus.png" alt="+" class="icono">
+                <img src="public/assets/images/plus.png" alt="+" class="icono">
             </button>
         </div>
         <div class="menu-opciones">
             <button class="menu-boton">
-                <img src="img/imgMain/persona.png" alt="Avatares" class="icono">
+                <img src="public/assets/images/persona.png" alt="Avatares" class="icono">
                 Avatares
             </button>
             <button class="menu-boton">
-                <img src="img/imgMain/estrella.png" alt="Vestimenta" class="icono">
+                <img src="public/assets/images/estrella.png" alt="Vestimenta" class="icono">
                 Vestimenta
             </button>
             <button class="menu-boton">
-                <img src="img/imgMain/paraguas.png" alt="Accesorios" class="icono">
+                <img src="public/assets/images/paraguas.png" alt="Accesorios" class="icono">
                 Accesorios
             </button>
             <button class="menu-boton">
-                <img src="img/imgMain/paquete.png" alt="Paquetes" class="icono">
+                <img src="public/assets/images/paquete.png" alt="Paquetes" class="icono">
                 Paquetes
             </button>
         </div>
@@ -41,15 +41,16 @@
     <div class="contenido-principal">
         <h2>Avatares pre-hechos:</h2>
         <div class="galeria-avatares">
-            <div class="avatar"><img src="img/imgAvatar/avatar01.png" alt="Avatar 1"></div>
-            <div class="avatar"><img src="img/imgAvatar/avatar02.png" alt="Avatar 2"></div>
-            <div class="avatar"><img src="img/imgAvatar/avatar03.png" alt="Avatar 3"></div>
-            <div class="avatar"><img src="img/imgAvatar/avatar04.png" alt="Avatar 4"></div>
-            <div class="avatar"><img src="img/imgAvatar/avatar05.png" alt="Avatar 5"></div>
+            <div class="avatar"><img src="public/assets/images/avatar01.png" alt="Avatar 1"></div>
+            <div class="avatar"><img src="public/assets/images/avatar02.png" alt="Avatar 2"></div>
+            <div class="avatar"><img src="public/assets/images/avatar03.png" alt="Avatar 3"></div>
+            <div class="avatar"><img src="public/assets/images/avatar04.png" alt="Avatar 4"></div>
+            <div class="avatar"><img src="public/assets/images/avatar05.png" alt="Avatar 5"></div>
         </div>
     </div>
     
-     <script src="script.js"></script>
+     <script src="public/assets/scripts/script.js"></script>
     
 </body>
 </html>
+
