--- a/mensajes.html
+++ b/mensajes.html
@@ -7,34 +7,77 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="menu-lateral" class="menu-lateral">
+        <div class="menu-barra">
+            <button class="menu-boton">
+                <img src="img/imgMain/barraLateral.png" alt="barra" class="icono">
+            </button>
+        </div>
+        <div class="menu-opciones">
+            <button class="menu-boton" onclick="location.href='mensajes.html'">
+                <img src="img/imgMain/chat.png" alt="Chat" class="icono">
+                Chat
+            </button>
+            <button class="menu-boton">
+                <img src="img/imgMain/persona.png" alt="Avatares" class="icono">
+                Avatares
+            </button>
+            <button class="menu-boton">
+                <img src="img/imgMain/estrella.png" alt="Vestimenta" class="icono">
+                Vestimenta
+            </button>
+            <button class="menu-boton">
+                <img src="img/imgMain/paraguas.png" alt="Accesorios" class="icono">
+                Accesorios
+            </button>
+            <button class="menu-boton">
+                <img src="img/imgMain/paquete.png" alt="Paquetes" class="icono">
+                Paquetes
+            </button>
+        </div>
+    </div>
     <div class="container-mensajes">
         <div class="lista-conversaciones">
             <h2>Mensajes</h2>
-            <div class="conversacion seleccionada">
-                <p>Anna - Whatsapp</p>
-                <p class="mensaje-previo">Buenas, ya terminaste tu p...</p>
+            <div class="conversacion seleccionada"  onclick="cambiarChat(1)">
+                <img src="img/LogoAvaria.png" alt="ImgPerfil" class="imgPerfil">
+                <p class="mensaje-previo">Anna - Whatsapp <br> Oye Francisco, estas?</p>
                 <span class="hora">10 min</span>
+            </div>  
+            <div class="conversacion" onclick="cambiarChat(2)">
+                <img src="img/LogoAvaria.png" alt="ImgPerfil" class="imgPerfil">
+                <p class="mensaje-previo">Luis - Telegram <br> Hola! ¿Cómo estás?</p>
+                <span class="hora">15 min</span>
             </div>
-           
+            <div class="conversacion" onclick="cambiarChat(3)">
+                <img src="img/LogoAvaria.png" alt="ImgPerfil" class="imgPerfil">
+                <p class="mensaje-previo">Maria - Telegram <br> Buenos días, todo bien?</p>
+                <span class="hora">20 min</span>
+            </div>
+            <div class="conversacion" onclick="cambiarChat(4)">
+                <img src="img/LogoAvaria.png" alt="ImgPerfil" class="imgPerfil">
+                <p class="mensaje-previo">Carlos - Messenger <br> Vamos a la reunión?</p>
+                <span class="hora">1 hora</span>
+            </div>
+            <div class="conversacion" onclick="cambiarChat(5)">
+                <img src="img/LogoAvaria.png" alt="ImgPerfil" class="imgPerfil">
+                <p class="mensaje-previo">Sofía - WhatsApp <br> Qué planes para hoy?</p>
+                <span class="hora">2 horas</span>
+            </div>
         </div>
+        
         <div class="panel-mensajes">
             <div class="encabezado-conversacion">
-                <h2>Anna</h2>
+                <h2 id="nombre-chat">Selecciona una conversación</h2>
                 <div class="iconos">
                     <img src="img/imgMain/persona.png" alt="Configuración">
                 </div>
             </div>
-            <div id="mensajes" class="mensajes"> 
-                <div class="mensaje-otro">
-                    <p>Oye ——</p>
-                </div>
-                <div class="mensaje-otro">Buenas, ya terminaste tu parte del trabajo?</div>
-                <div class="mensaje-propio">
-                    <p>...</p>
-                </div>
+            <div id="mensajes" class="mensajes">
+                <p id="mensaje-vacio" class="mensaje-vacio">Selecciona una conversación para comenzar</p>
             </div>
             <div class="barra-escribir">
-                <input id="mensaje-input" type="text" placeholder="Escribe un mensaje..."> <!-- Agregamos id 'mensaje-input' -->
+                <input id="mensaje-input" type="text" placeholder="Escribe un mensaje...">
                 <button onclick="enviarMensaje()">Enviar</button>
                 <div class="iconos-barra">
                     <img src="img/imgMain/emoji.png" alt="Emojis">
@@ -46,3 +89,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
