--- a/mainMenu.html
+++ b/mainMenu.html
@@ -15,7 +15,7 @@
         </div>
         <div class="menu-item">
             <button class="menu-boton" onclick="location.href='mensajes.html'">
-                <img src="public/assets/images/plus.png" alt="+" class="icono">
+                <img src="public/assets/images/chat.png" alt="Chat" class="icono">
             </button>
         </div>
         <div class="menu-opciones">
