Update_avatares_mainMenu.html

--- a/mainMenu.html
+++ b/mainMenu.html
@@ -19,7 +19,7 @@
             </button>
         </div>
         <div class="menu-opciones">
-            <button class="menu-boton">
+            <button class="menu-boton" onclick="location.href='avatares.html'>
                 <img src="public/assets/images/persona.png" alt="Avatares" class="icono">
                 Avatares
             </button>
