--- a/mainMenu.html
+++ b/mainMenu.html
@@ -16,6 +16,7 @@
         <div class="menu-item">
             <button class="menu-boton" onclick="location.href='mensajes.html'">
                 <img src="public/assets/images/chat.png" alt="Chat" class="icono">
+                Chat
             </button>
         </div>
         <div class="menu-opciones">
