--- a/mainMenu.html
+++ b/mainMenu.html
@@ -20,19 +20,19 @@
             </button>
         </div>
         <div class="menu-opciones">
-            <button class="menu-boton" onclick="location.href='avatares.html'>
+            <button class="menu-boton" onclick="location.href='avatares.html'">
                 <img src="public/assets/images/persona.png" alt="Avatares" class="icono">
                 Avatares
             </button>
-            <button class="menu-boton" onclick="location.href='vestimenta.html'>
+            <button class="menu-boton" onclick="location.href='vestimenta.html'">
                 <img src="public/assets/images/estrella.png" alt="Vestimenta" class="icono">
                 Vestimenta
             </button>
-            <button class="menu-boton" onclick="location.href='accesorios.html'>
+            <button class="menu-boton" onclick="location.href='accesorios.html'">
                 <img src="public/assets/images/paraguas.png" alt="Accesorios" class="icono">
                 Accesorios
             </button>
-            <button class="menu-boton" onclick="location.href='paquetes.html'>
+            <button class="menu-boton" onclick="location.href='paquetes.html'">
                 <img src="public/assets/images/paquete.png" alt="Paquetes" class="icono">
                 Paquetes
             </button>
@@ -50,8 +50,6 @@
         </div>
     </div>
     
-     <script src="public/assets/scripts/script.js"></script>
-    
+    <script src="public/assets/scripts/script.js"></script>
 </body>
 </html>
-
