--- a/avatares.html
+++ b/avatares.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Creador de Avatar</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="public/assets/styles/styles.css">
 </head>
 <body>
   <div id="menu-lateral" class="menu-lateral">
