--- a/avatares.html
+++ b/avatares.html
@@ -15,23 +15,23 @@
     </div>
     <div class="menu-opciones">
         <button class="menu-boton" onclick="location.href='mensajes.html'">
-            <img src="img/imgMain/chat.png" alt="Chat" class="icono">
+            <img src="/assets/images/barraLaterchat.png" alt="Chat" class="icono">
             Chat
         </button>
         <button class="menu-boton" onclick="location.href='avatares.html'">
-            <img src="img/imgMain/persona.png" alt="Avatares" class="icono">
+            <img src="/assets/images/barraLaterpersona.png" alt="Avatares" class="icono">
             Avatares
         </button>
         <button class="menu-boton" onclick="location.href='vestimenta.html'">
-            <img src="img/imgMain/estrella.png" alt="Vestimenta" class="icono">
+            <img src="/assets/images/barraLaterestrella.png" alt="Vestimenta" class="icono">
             Vestimenta
         </button>
         <button class="menu-boton" onclick="location.href='accesorios.html'">
-            <img src="img/imgMain/paraguas.png" alt="Accesorios" class="icono">
+            <img src="/assets/images/barraLaterparaguas.png" alt="Accesorios" class="icono">
             Accesorios
         </button>
         <button class="menu-boton">
-            <img src="img/imgMain/paquete.png" alt="Paquetes" class="icono">
+            <img src="/assets/images/barraLaterpaquete.png" alt="Paquetes" class="icono">
             Paquetes
         </button>
     </div>
