--- a/avatares.html
+++ b/avatares.html
@@ -72,7 +72,7 @@
     </div>
     <button onclick="resetAvatar()">Restablecer Avatar</button>
   </div>
-  <script src="script.js"></script>
+  <script src="public/assets/scripts/script.js"></script>
 
 </body>
 </html>
