--- a/accesorios.html
+++ b/accesorios.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accesorios de Avatar</title>
+   <link rel="stylesheet" href="public/assets/styles/styles.css">
   
 </head>
 <body>
