--- a/vestimenta.html
+++ b/vestimenta.html
@@ -7,7 +7,35 @@
    
 </head>
 <body>
-
+    <div id="menu-lateral" class="menu-lateral">
+        <div class="menu-barra">
+            <button class="menu-boton">
+                <img src="public/assets/images/barraLateral.png" alt="barra" class="icono">
+            </button>
+        </div>
+        <div class="menu-opciones">
+            <button class="menu-boton" onclick="location.href='mensajes.html'">
+                <img src="public/assets/images/chat.png" alt="Chat" class="icono">
+                Chat
+            </button>
+            <button class="menu-boton" onclick="location.href='avatares.html'">
+                <img src="public/assets/images/persona.png" alt="Avatares" class="icono">
+                Avatares
+            </button>
+            <button class="menu-boton" onclick="location.href='vestimenta.html'">
+                <img src="public/assets/images/estrella.png" alt="Vestimenta" class="icono">
+                Vestimenta
+            </button>
+            <button class="menu-boton" onclick="location.href='accesorios.html'">
+                <img src="public/assets/images/paraguas.png" alt="Accesorios" class="icono">
+                Accesorios
+            </button>
+            <button class="menu-boton">
+                <img src="public/assets/images/paquete.png" alt="Paquetes" class="icono">
+                Paquetes
+            </button>
+        </div>
+    </div>
     <div class="container">
    
         <div class="avatar-container">
