--- a/vestimenta.html
+++ b/vestimenta.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="public/assets/styles/styles.css">
     <title>Sección de Vestimenta</title>
    
 </head>
