--- a/mainMenu.html
+++ b/mainMenu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú Principal - Avaria</title>
     <link rel="stylesheet" href="public/assets/styles/styles.css">
+    <link rel="icon" href="public/assets/images/LogoAvaria.png">
 </head>
 <body>
     <div class="menu-lateral">
