--- a/vestimenta.html
+++ b/vestimenta.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/assets/styles/styles.css">
+    <link rel="icon" href="public/assets/images/LogoAvaria.png">
     <title>Sección de Vestimenta</title>
    
 </head>
