--- a/avatares.html
+++ b/avatares.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Creador de Avatar</title>
   <link rel="stylesheet" href="public/assets/styles/styles.css">
+  <link rel="icon" href="public/assets/images/LogoAvaria.png">
 </head>
 <body>
   <div id="menu-lateral" class="menu-lateral">
