--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 ya sea por dificultades físicas o mentales.
             </p>
         </section>
-        <button class="registrate" onclick="location.href='index.html'">Regístrate</button>
+        <button class="registrate" onclick="location.href='inicio01.html'">Regístrate</button>
     </div>
 </body>
 </html>
