--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Bienvenido a Avaria</h2>
+        <h2>Bienvenido a Avaria causaaaaaaaaaaa</h2>
         <img src="public/assets/images/LogoAvaria.png" alt="Logo" class="logo">
         <button onclick="location.href='inicioSesion.html'">Iniciar Sesión</button>
     </div>
