--- a/avatares.html
+++ b/avatares.html
@@ -32,8 +32,8 @@
             Accesorios
         </button>
         <button class="menu-boton">
-            <img src="public/assets/images/barraLaterpaquete.png" alt="Paquetes" class="icono">
-            Paquetes
+            <img src="public/assets/images/barraLaterpaquete.png" alt="Configuración" class="icono">
+            Configuración
         </button>
     </div>
 </div>
