--- a/accesorios.html
+++ b/accesorios.html
@@ -33,8 +33,8 @@
                 Accesorios
             </button>
             <button class="menu-boton">
-                <img src="public/assets/images/paquete.png" alt="Paquetes" class="icono">
-                Paquetes
+                <img src="public/assets/images/paquete.png" alt="Configuracion" class="icono">
+                Configuración
             </button>
         </div>
   </div>
