--- a/avatares.html
+++ b/avatares.html
@@ -32,7 +32,7 @@
             Accesorios
         </button>
         <button class="menu-boton">
-            <img src="public/assets/images/barraLaterpaquete.png" alt="Configuración" class="icono">
+            <img src="public/assets/images/barraLaterpaquete.png" alt="Configuracion" class="icono">
             Configuración
         </button>
     </div>
