--- a/accesorios.html
+++ b/accesorios.html
@@ -32,7 +32,7 @@
                 <img src="public/assets/images/paraguas.png" alt="Accesorios" class="icono">
                 Accesorios
             </button>
-            <button class="menu-boton">
+            <button class="menu-boton" onclick="location.href='paquetes.html'">
                 <img src="public/assets/images/paquete.png" alt="Configuracion" class="icono">
                 Configuración
             </button>
