--- a/avatares.html
+++ b/avatares.html
@@ -31,7 +31,7 @@
             <img src="public/assets/images/paraguas.png" alt="Accesorios" class="icono">
             Accesorios
         </button>
-        <button class="menu-boton">
+        <button class="menu-boton" onclick="location.href='paquetes.html'">
             <img src="public/assets/images/barraLaterpaquete.png" alt="Configuracion" class="icono">
             Configuración
         </button>
