--- a/mensajes.html
+++ b/mensajes.html
@@ -31,9 +31,9 @@
                 <img src="public/assets/images/paraguas.png" alt="Accesorios" class="icono">
                 Accesorios
             </button>
-            <button class="menu-boton">
-                <img src="public/assets/images/paquete.png" alt="Paquetes" class="icono">
-                Paquetes
+            <button class="menu-boton" onclick="location.href='paquetes.html'">
+                <img src="public/assets/images/paquete.png" alt="Configuracion" class="icono">
+                Configuración
             </button>
         </div>
     </div>
