--- a/vestimenta.html
+++ b/vestimenta.html
@@ -35,9 +35,9 @@
                 <img src="public/assets/images/paraguas.png" alt="Accesorios" class="icono">
                 Accesorios
             </button>
-            <button class="menu-boton">
-                <img src="public/assets/images/paquete.png" alt="Paquetes" class="icono">
-                Paquetes
+            <button class="menu-boton" onclick="location.href='configuracion.html'">
+                <img src="public/assets/images/paquete.png" alt="Configuracion" class="icono">
+                Configuracion
             </button>
         </div>
     </div>
