--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@ footer {
     </nav>
     <section id="hero" class="hero">
         <div class="container">
-            <h1>¡BIENVENIDO A AVARIA! <br> <small>La IA que responde por ti cuando no puedes hacerlo</small></h1>
+            <h1>¡BIENVENIDO A AVARIA! <br></h1>
+            <h2>La IA que responde por ti cuando no puedes hacerlo</h2>
             <a href="inicio01.html" class="btn" target="_blank">Registrate</a>
         </div>
     </section>
@@ -278,17 +279,17 @@ footer {
             <h2>SOBRE NOSOSTROS</h2>
             <div class="content-grid">
                 <div class="card">
-                    <img src="public/assets/images/mision.png" alt="Lorem Ipsum">
+                    <img src="public/assets/images/mision.png" alt="Mision">
                     <h3>Misión</h3>
                     <p>Avaria optimiza la comunicación con IA avanzada, ofreciendo gestión personalizada de mensajes y llamadas, garantizando privacidad y seguridad.</p>
                 </div>
                 <div class="card">
-                    <img src="public/assets/images/vision.png" alt="Lorem Ipsum">
+                    <img src="public/assets/images/vision.png" alt="Vision">
                     <h3>Visión</h3>
                     <p>Avaria busca liderar la gestión de comunicaciones personalizadas, revolucionando las interacciones digitales con una IA segura y adaptable, esencial para la vida moderna.</p>
                 </div>
                 <div class="card">
-                    <img src="public/assets/images/valores.png" alt="Lorem Ipsum">
+                    <img src="public/assets/images/valores.png" alt="Valores">
                     <h3>Valores</h3>
                     <p>Avaria se dedica a brindar soluciones innovadoras y personalizadas, asegurando seguridad, excelencia y flexibilidad para optimizar las comunicaciones digitales a nivel global.</p>
                 </div>
@@ -300,7 +301,14 @@ footer {
             <img src="public/assets/images/servicios.jpg" alt="Lorem Ipsum" class="company-logo">
             <div class="company-info">
                 <h2>Servicios</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Las principales funciones de la aplicación "Avaria" incluyen la gestión de mensajes y llamadas, permitiendo a los usuarios enviar y recibir mensajes de texto, audios, y realizar llamadas y videollamadas en tiempo real. 
+                    <br><br>La aplicación destaca por su capacidad de personalización, permitiendo ajustar la personalidad, apariencia, tono y volumen de la voz de la inteligencia artificial (IA), 
+                    e incluso vestir su avatar con accesorios virtuales. Los usuarios pueden elegir que la IA replique su voz, 
+                    rostro y personalidad, o que actúe como una persona completamente nueva.
+                    <br><br>Además, "Avaria" asegura la máxima seguridad con encriptación de grado militar y ofrece total transparencia 
+                    mediante un registro detallado de todas las interacciones realizadas. 
+                    Los usuarios también pueden solicitar resúmenes de conversaciones en formato de video, audio o mensaje. 
+                    Finalmente, los usuarios pueden acceder a accesorios para personalizar aún más su avatar.</p>
             </div>
         </div>
     </section>
