--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {
   background-color: var(--deep-blue);
   color: var(--light-gray);
   display: flex;
-  align-items: center; /* Update: Center vertically */
+  align-items: center; 
   padding: var(--section-padding);
   padding-top: 80px;
 }
@@ -105,6 +105,7 @@ body {
 .content-section {
   padding: var(--section-padding);
   background-color: var(--light-gray);
+  text-align: justify;
 }
 
 .content-grid {
@@ -132,6 +133,7 @@ body {
 .company-section {
   padding: var(--section-padding);
   background-color: white;
+  text-align: justify;
 }
 
 .company-logo {
