--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Avaria</title>
-    <link rel="stylesheet" href="public/assets/stylesLP.css" />
+    <link rel="stylesheet" href="public/assets/styles/stylesLP.css" />
     <link rel="icon" href="public/assets/images/LogoAvaria.png" />
   </head>
   <body>
