--- a/inicio01.html
+++ b/inicio01.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h2>Bienvenido a Avaria</h2>
         <img src="public/assets/images/LogoAvaria.png" alt="Logo" class="logo">
-        <button onclick="location.href='inicioSesion.html'">Iniciar Sesión</button>
+        <button onclick="location.href='inicioSesion.html'">Registrarse</button>
     </div>
 </body>
 </html>
